# QMS

./: .gitignore  .gitmodules  CMakeLists.txt  QMS.pro  README.md  main.cpp  requirements.txt  tr_script.py
.github/workflows/: build-and-release.yaml  build-and-release.yml  build.yaml  build.yml
Configurator/: Configurator.cpp  Configurator.h
QMS/: QMS.cpp  QMS.h  qms.cpp
RegistryMonitor/: RegistryMonitor.cpp  RegistryMonitor.h
Resources/qml/: Configurator.qml  Configurator10.qml
ShortcutManager/: ShortcutManager.cpp
Utils/: Utils.cpp  Utils.h
src/: design.py  main.cpp  monitor_manager.py  qms.py  setup.py  shortcut_manager.py  utils.py
src/Configurator/: configurator.cpp  configurator.h  configurator.ui
src/QMS/: qms.cpp  qms.h  qms.ui
src/Resources/: resources.qrc
src/ShortcutManager/: shortcutmanager.cpp
src/Utils/: utils.cpp  utils.h
src/tr/: qms_de.ts  qms_en.ts  qms_fr.qm  qms_fr.ts
src/ui/: design.ui
